--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="Script.js" rel="Js"/>
 </head>
 <body>
+    <script src="promise-polyfill.js"></script>
+    <script src="fetch-polyfill.js"></script>
     <script src="js/Script.js"></script>
 </body>
 <ul class="pokemon-list">
