--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
     <link href="Script.js" rel="Js"/>
 </head>
 <body>
-    <div class="modal">
-        <button class="modal-close">Close</button>
-        <h1>Modal title</h1>
-        <p>Modal text</p>
-    </div>
-
+    <button id="show-modal">Show modal</button>
+    <div id="modal-container"></div>
+    
     <script src="promise-polyfill.js"></script>
     <script src="fetch-polyfill.js"></script>
     <script src="js/Script.js"></script>
