--- a/index.html
+++ b/index.html
@@ -1,190 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!--bootstrap CSS-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet"/>
-    <link href="Script.js" rel="Js"/>
-</head>
-<body>
-<<<<<<< Updated upstream
-    <button id="show-modal">Show modal</button>
-    <div id="modal-container"></div>
-    
-    <script src="promise-polyfill.js"></script>
-    <script src="fetch-polyfill.js"></script>
-=======
-   <div class="container modal-open">
-    <ul class="list-group">
-        <div class="allpokemonlist">
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal">bulbasaur</button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li>
-            <li class="list-item">
-                <button data-toggle="modal-open" data-target="modal"></button>
-            </li> 
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Pokedex</title>
+        <link rel="stylesheet" href="style.css" />
+        <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet" />
+        <!-- bootstrap -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    </head>
+
+    <body>
+        <div class="modalopen" role="dialog">
+         <div class="modal-content"><h1>...</h1></div>
         </div>
-    </ul>
-    <button id="myBtn">More Info</button>
-    <div id="themodal" class="modal">
-        <div class="modalinfo">
-           
-          </div>
-    </div>
-   </div>
 
-        <!-- jquery slim taken out-->
-        <script src="https://code.jquery.com/jquery-3.3.1" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-                    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <!--bootstrap--><script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  
-    <!--<script src="promise-polyfill.js"></script>-->
-    <!--<script src="fetch-polyfill.js"></script>-->
+        <div class="pokedex-content">
+            <h1>Pokedex</h1>
+            <ul id="pokedex"></ul>
+        </div>
 
-    <script src="js/Script.js"></script>
-</body>
+        <script src="Script.js"></script>
+           <!-- jquery slim taken out-->
+           <script src="https://code.jquery.com/jquery-3.3.1" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+           <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<!--bootstrap--><script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    </body>
 </html>
-
-
-
