--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <body>
         <div class="modalopen" role="dialog">
-         <div class="modal-content"><h1>...</h1></div>
+         <div class="modal-content"><h1>...</h1></div> <!-- id used for script.js -->
         </div>
 
         <div class="pokedex-content">
