--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     </head>
 
     <body>
-        <button class="button open-button">open modal</button>
+      
+        <button class="button open-button">Open modal</button>
         <dialog class="modal" id="modal">
             <h2>An interesting title</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum esse nisi, laboriosam illum temporibus ipsam?</p>
